--- a/code/index.html
+++ b/code/index.html
@@ -43,6 +43,8 @@
     <script src="./web_modules/d3/dist/d3.min.js"></script>
     <!-- map -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.js"></script>
+    <!-- moment js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <!-- include the main script -->
     <script src="./src/main.js" defer async></script>
 </body>
