Define chart skeleton

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,30 @@
     <hr/>
 
     <section id="chart-section">
-        <!-- TODO: add detail charts -->
+        <div class="chart-wrapper">
+            <h3>Häufigste Einsatzarten</h3>
+            <div class="chart">
+                <!-- TODO: add chart -->
+            </div>
+        </div>
+        <div class="chart-wrapper">
+            <h3>Aktivste Feuerwehren</h3>
+            <div class="chart">
+                <!-- TODO: add chart -->
+            </div>
+        </div>
+        <div class="chart-wrapper">
+            <h3>Durchschnittliche Einsatzdauer nach Art</h3>
+            <div class="chart">
+                <!-- TODO: add chart -->
+            </div>
+        </div>
+        <div class="chart-wrapper">
+            <h3>Anzahl der Einsätze pro Tage des Monats</h3>
+            <div class="chart">
+                <!-- TODO: add chart -->
+            </div>
+        </div>
     </section>
 
     <!-- include D3 library -->
