--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@
         <div class="chart-wrapper">
             <h3>Häufigste Einsatzarten</h3>
             <div class="chart">
-                <!-- TODO: add chart -->
+                <svg id="alarmTypeHistogram"></svg>
             </div>
         </div>
         <div class="chart-wrapper">
