Add barchart showing most active brigades

--- a/code/index.html
+++ b/code/index.html
@@ -39,13 +39,13 @@
         <div class="chart-wrapper">
             <h3>Häufigste Einsatzarten</h3>
             <div class="chart">
-                <svg id="alarmTypeHistogram"></svg>
+                <svg id="alarmTypeBarChart"></svg>
             </div>
         </div>
         <div class="chart-wrapper">
             <h3>Aktivste Feuerwehren</h3>
             <div class="chart">
-                <!-- TODO: add chart -->
+                <svg id="mostActiveBrigadesBarChart"></svg>
             </div>
         </div>
         <div class="chart-wrapper">
