--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,7 @@
         <div class="chart-wrapper">
             <h3>Durchschnittliche Einsatzdauer nach Art</h3>
             <div class="chart">
-                <!-- TODO: add chart -->
+                <svg id="averageCallDurationBarChart"></svg>
             </div>
         </div>
         <div class="chart-wrapper">
