Add linechart showing alarms per day

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
             <h2>Jänner 2020 &mdash; Oktober 2020</h2>
         </div>
         <div class="dropdown">
-            <select id="month">
+            <select id="month" autocomplete="off">
                 <option value="1">Jänner 2020</option>
                 <option value="2">Februar 2020</option>
                 <option value="3">März 2020</option>
@@ -57,7 +57,7 @@
         <div class="chart-wrapper">
             <h3>Anzahl der Einsätze pro Tage des Monats</h3>
             <div class="chart">
-                <!-- TODO: add chart -->
+                <svg id="alarmsPerDayLineChart"></svg>
             </div>
         </div>
     </section>
