--- a/code/index.html
+++ b/code/index.html
@@ -31,6 +31,11 @@
 
     <section id="map-section">
         <svg id="map"></svg>
+        <div id="district-indicator">
+            Bezirk:
+            <span id="district">alle</span>
+            <a id="resetDistrictLink" href="#" onclick="resetDistrict()">[zurücksetzen]</a>
+        </div>
     </section>
 
     <hr/>
