Add tooltip for linechart

--- a/code/index.html
+++ b/code/index.html
@@ -65,6 +65,7 @@
                 <svg id="alarmsPerDayLineChart"></svg>
             </div>
         </div>
+        <div id="tooltip"></div>
     </section>
 
     <!-- include D3 library -->
