Add spinner while loading initial data

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
             <h2>Jänner 2020 &mdash; Oktober 2020</h2>
         </div>
         <div class="dropdown">
-            <select id="month" autocomplete="off">
+            <select id="month" autocomplete="off" disabled="true">
                 <option value="1">Jänner 2020</option>
                 <option value="2">Februar 2020</option>
                 <option value="3">März 2020</option>
@@ -28,6 +28,10 @@
             </select>
         </div>
     </header>
+
+    <section>
+        <div id="spinner" class="loader"></div>
+    </section>
 
     <section id="map-section">
         <svg id="map"></svg>
