Improve website title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>BDV Lab Project Template</title>
+    <title>Feuerwehreinsätze OÖ | Jänner 2020 — Oktober 2020</title>
     <link rel="stylesheet" href="./src/style.css">
 </head>
 
